--- a/SDZ_custom/config.json
+++ b/SDZ_custom/config.json
@@ -21,7 +21,7 @@
     "do_not_add_watermark": false,
     "temp_dir": "",
     "clean_temp_dir_at_start": false,
-    "outdir_samples": "/content/gdrive/Shareddrives/Data13/zdream/out",
+    "outdir_samples": "",
     "outdir_txt2img_samples": "outputs/txt2img-images",
     "outdir_img2img_samples": "outputs/img2img-images",
     "outdir_extras_samples": "outputs/extras-images",
