--- a/SDZ_custom/SDZ_config.json
+++ b/SDZ_custom/SDZ_config.json
@@ -332,12 +332,19 @@
     "tac_keymap": "{\n    \"MoveUp\": \"ArrowUp\",\n    \"MoveDown\": \"ArrowDown\",\n    \"JumpUp\": \"PageUp\",\n    \"JumpDown\": \"PageDown\",\n    \"JumpToStart\": \"Home\",\n    \"JumpToEnd\": \"End\",\n    \"ChooseSelected\": \"Enter\",\n    \"ChooseFirstOrSelected\": \"Tab\",\n    \"Close\": \"Escape\"\n}",
     "tac_colormap": "{\n    \"danbooru\": {\n        \"-1\": [\"red\", \"maroon\"],\n        \"0\": [\"lightblue\", \"dodgerblue\"],\n        \"1\": [\"indianred\", \"firebrick\"],\n        \"3\": [\"violet\", \"darkorchid\"],\n        \"4\": [\"lightgreen\", \"darkgreen\"],\n        \"5\": [\"orange\", \"darkorange\"]\n    },\n    \"e621\": {\n        \"-1\": [\"red\", \"maroon\"],\n        \"0\": [\"lightblue\", \"dodgerblue\"],\n        \"1\": [\"gold\", \"goldenrod\"],\n        \"3\": [\"violet\", \"darkorchid\"],\n        \"4\": [\"lightgreen\", \"darkgreen\"],\n        \"5\": [\"tomato\", \"darksalmon\"],\n        \"6\": [\"red\", \"maroon\"],\n        \"7\": [\"whitesmoke\", \"black\"],\n        \"8\": [\"seagreen\", \"darkseagreen\"]\n    }\n}",
     "tac_refreshTempFiles": "Refresh TAC temp files",
+    "ad_max_models": 2,
+    "ad_save_previews": false,
+    "ad_save_images_before": false,
+    "ad_only_seleted_scripts": true,
+    "ad_script_names": "dynamic_prompting,dynamic_thresholding,wildcard_recursive,wildcards,lora_block_weight",
+    "ad_bbox_sortby": "None",
     "queue_paused": false,
     "queue_button_placement": "Under Generate button",
     "queue_button_hide_checkpoint": true,
     "queue_history_retention_days": "30 days",
     "queue_keyboard_shortcut": "Ctrl+KeyE",
     "queue_ui_placement": "As a tab",
+    "cleaner_use_gpu": true,
     "control_net_detectedmap_dir": "detected_maps",
     "control_net_models_path": "",
     "control_net_modules_path": "",
